--- a/templates/controlpanel.html
+++ b/templates/controlpanel.html
@@ -2,10 +2,15 @@
 {% block main %}
 <p>You are in {{ groups|length }} groups.</p>
 <form>
+    <input type="hidden" value="{{ access_token }}">
     <select name="group">
     {% for group in groups %}
         <option>{{ group.name }}</option>
     {% endfor %}
     </select>
+    <p>Optional customizations:</p>
+    <input name="name" type="text" placeholder="Custom bot name">
+    <input name="avatar" type="text" placeholder="Custom avatar image URL">
+    <input type="submit" value="Create bot">
 </form>
 {% endblock %}
