Remove failure case in connecting to database

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Yalebot</title>
-        <link rel="stylesheet" href="/static/styles.css">
+        <link rel="stylesheet" href="/static/style.css">
     </head>
     <body>
         {% block main %}
