--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,6 +5,9 @@
         <link rel="stylesheet" href="/static/style.css">
     </head>
     <body>
+        <header>
+            <img src="/static/images/logo.png">
+        </header>
         {% block main %}
         {% endblock %}
     </body>
