--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,9 +6,14 @@
     </head>
     <body>
         <header>
-            <img src="/static/images/logo.png">
+            <img src="/static/images/logo.png" alt="Yalebot logo" id="logo">
         </header>
-        {% block main %}
-        {% endblock %}
+        <main>
+            {% block main %}
+            {% endblock %}
+        </main>
+        <footer>
+            &copy; Erik Boesen. YaleNew font is property of Yale University.
+        </footer>
     </body>
 </html>
