--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
 {% extends "layout.html" %}
 {% block main %}
-<a href="https://oauth.groupme.com/oauth/authorize?client_id=46tkWF26m1juUxxvRGKUjVqVjbejYK4Njz3VA4ZZjWhr5dtH">Sign in with GroupMe</a>
+<a class="button" href="https://oauth.groupme.com/oauth/authorize?client_id=46tkWF26m1juUxxvRGKUjVqVjbejYK4Njz3VA4ZZjWhr5dtH">Sign in with GroupMe</a>
 {% endblock %}
