--- a/templates/layout.html
+++ b/templates/layout.html
@@ -13,7 +13,7 @@
             {% endblock %}
         </main>
         <footer>
-            &copy; Erik Boesen. YaleNew font is property of Yale University.
+            &copy; <a href="https://erikboesen.com">Erik Boesen</a>. YaleNew font is property of Yale University. Not created or endorsed by Yale University or affiliates.
         </footer>
     </body>
 </html>
