--- a/templates/controlpanel.html
+++ b/templates/controlpanel.html
@@ -11,6 +11,6 @@
     <p>Optional customizations:</p>
     <input name="name" type="text" placeholder="Custom bot name">
     <input name="avatar_url" type="text" placeholder="Custom avatar image URL">
-    <input type="submit" value="Create bot">
+    <input type="submit" class="button" value="Create bot">
 </form>
 {% endblock %}
