Remove bot from database when deleted

--- a/static/style.css
+++ b/static/style.css
@@ -74,7 +74,7 @@ label {
 .button[disabled]:hover, .button[disabled]:focus, .button[disabled]:active {
     /* TODO: duplication */
     color: #00356b;
-    background: white;;
+    background: white;
 }
 table {
 
