Rename controlpanel -> manager

--- a/templates/manager.html
+++ b/templates/manager.html
@@ -41,5 +41,5 @@
         </tbody>
     </table>
 </section>
-<script src="/static/scripts/controlpanel.js"></script>
+<script src="/static/scripts/manager.js"></script>
 {% endblock %}
