Pass around group_id rather than bot_id for ddeletion

--- a/templates/manager.html
+++ b/templates/manager.html
@@ -35,7 +35,7 @@
                 <td>{{ bot.bot_id }}</td>
                 <td>{{ bot.group_name }}</td>
                 <td>{{ bot.name }}</td>
-                <td><button class="button delete" bot_id="{{ bot.bot_id }}">Delete</button></td>
+                <td><button class="button delete" group_id="{{ bot.group_id }}">Delete</button></td>
             </tr>
             {% endfor %}
         </tbody>
