Delete privacy policy and terms of service

--- a/templates/manager.html
+++ b/templates/manager.html
@@ -12,8 +12,7 @@
         <p>Optional customizations:</p>
         <label>Bot name: <input name="name" type="text" placeholder="Custom bot name"></label>
         <label>Bot avatar: <input name="avatar_url" type="text" placeholder="Custom avatar image URL"></label>
-        <label><input type="checkbox" id="accept"> I agree to the <a href="/static/ppol.html">Yalebot Privacy Policy</a> and the <a href="/static/tac.html">Yalebot Terms and Conditions</a>. I hereby grant Yalebot access to my GroupMe account, and authorize it to perform various actions on my behalf.</label>
-        <input disabled type="submit" class="button" id="add" value="Add bot">
+        <input type="submit" class="button" id="add" value="Add bot">
     </form>
 </section>
 <section>
