--- a/templates/manager.html
+++ b/templates/manager.html
@@ -32,7 +32,7 @@
                 <td>{{ bot.bot_id }}</td>
                 <td>{{ bot.group_name }}</td>
                 <td>{{ bot.name }}</td>
-                <td><button class="button delete" group_id="{{ bot.group_id }}">Delete</button></td>
+                <td><button class="button delete" group_id="{{ bot.group_id }}">Leave</button></td>
             </tr>
             {% endfor %}
         </tbody>
