Fix last section still having margin

--- a/static/style.css
+++ b/static/style.css
@@ -31,7 +31,7 @@ header #logo {
 section {
     margin-bottom: 20px;
 }
-section:last-child {
+section:last-of-type {
     margin-bottom: 0;
 }
 a {
