--- a/templates/layout.html
+++ b/templates/layout.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
         <title>Yalebot</title>
+        <meta name="viewport" content="width=device-width">
         <link rel="stylesheet" href="/static/style.css">
     </head>
     <body>
