--- a/templates/layout.html
+++ b/templates/layout.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <header>
-            <img src="/static/images/logo.png" alt="Yalebot logo" id="logo">
+            <h1>Yalebot</h1>
         </header>
         <main>
             {% block main %}
