Add theme-color meta tag

--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>Yalebot</title>
         <meta name="viewport" content="width=device-width">
+        <meta name="theme-color" content="#00356b">
         <link rel="stylesheet" href="/static/style.css">
     </head>
     <body>
