--- a/templates/layout.html
+++ b/templates/layout.html
@@ -16,7 +16,7 @@
             {% endblock %}
         </main>
         <footer>
-            &copy; <a href="https://erikboesen.com">Erik Boesen</a>. YaleNew font is property of Yale University. Not created or endorsed by Yale University or affiliates.
+            &copy; <a href="https://erikboesen.com">Erik Boesen</a>.
         </footer>
     </body>
 </html>
