Delete text on homepage

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,17 +1,4 @@
 {% extends "layout.html" %}
 {% block main %}
-<p>Yalebot is a GroupMe chatbot for the Yale Class of 2023. It has a number of functions, including:</p>
-<ul>
-    <li>Verifying whether users are actual Yale admits</li>
-    <li>Making memes</li>
-    <li>Drawing imitation Snapchat filters onto pictures</li>
-    <li>Providing links to 2023 resources</li>
-    <li>Saying song lyrics</li>
-    <li>Generating inspirational quotes</li>
-    <li>Providing fun facts and conversation starters</li>
-    <li>A bunch of text effects</li>
-    <li>Tons of other features!</li>
-</ul>
-<p>Add Yalebot to your own group!</p>
-<a class="button" href="https://oauth.groupme.com/oauth/authorize?client_id=46tkWF26m1juUxxvRGKUjVqVjbejYK4Njz3VA4ZZjWhr5dtH">Sign in with GroupMe</a>
+<a class="button" href="https://oauth.groupme.com/oauth/authorize?client_id=46tkWF26m1juUxxvRGKUjVqVjbejYK4Njz3VA4ZZjWhr5dtH">Add Yalebot to a group</a>
 {% endblock %}
