--- a/templates/manager.html
+++ b/templates/manager.html
@@ -38,5 +38,15 @@
         </tbody>
     </table>
 </section>
+<section>
+    <h2>Are you exhorbitantly wealthy? Help me pay my tuition please</h2>
+    <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+        <input type="hidden" name="cmd" value="_donations" />
+        <input type="hidden" name="business" value="TASL57L8A2FMN" />
+        <input type="hidden" name="currency_code" value="USD" />
+        <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+        <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
+    </form>
+</section>
 <script src="/static/scripts/manager.js"></script>
 {% endblock %}
