Add debug logging when sending card chioce to endpoint

--- a/templates/cah.html
+++ b/templates/cah.html
@@ -7,8 +7,6 @@
     </div>
     {% endfor %}
 </div>
-<div class="score">
-    {{ score }}
-</div>
+<div class="score">Your score: {{ score }}</div>
 <script src="/static/scripts/cah.js">
 {% endblock %}
