Fix missing script tag on cah page

--- a/templates/cah.html
+++ b/templates/cah.html
@@ -8,5 +8,5 @@
     {% endfor %}
 </div>
 <div class="score">Your score: {{ score }}</div>
-<script src="/static/scripts/cah.js">
+<script src="/static/scripts/cah.js"></script>
 {% endblock %}
