--- a/templates/cah.html
+++ b/templates/cah.html
@@ -1,6 +1,9 @@
 {% extends "layout.html" %}
 {% block main %}
 <div class="cards">
+    <div class="black card">
+        {{ black_card }}
+    </div>
     {% for card in cards %}
     <div class="white card">
         {{ card }}
