Use methods for getting game user is in

--- a/templates/cah.html
+++ b/templates/cah.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block main %}
-<div class="cards"
+<div class="cards">
     <div class="black card">
         {{ black_card }}
     </div>
