--- a/templates/cah.html
+++ b/templates/cah.html
@@ -1,5 +1,8 @@
 {% extends "layout.html" %}
 {% block main %}
+{% if is_czar %}
+<p>You are Card Czar.</p>
+{% endif %}
 <div class="cards">
     <div class="black card">
         {{ black_card }}
