--- a/templates/layout.html
+++ b/templates/layout.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <header>
-            <h1>Yalebot</h1>
+            <img src="/static/images/logo.png" alt="Yalebot logo">
         </header>
         <main>
             {% block main %}
