--- a/templates/layout.html
+++ b/templates/layout.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width">
         <meta name="theme-color" content="#00356b">
         <link rel="stylesheet" href="/static/style.css">
+        <link rel="icon" type="image/png" href="https://www.yale.edu/sites/all/themes/yale_blue/images/favicons/favicon.ico">
     </head>
     <body>
         <header>
