--- a/templates/manager.html
+++ b/templates/manager.html
@@ -39,7 +39,7 @@
     </table>
 </section>
 <section>
-    <h2>Are you exorbitantly wealthy or unreasonably kind? Help me pay my tuition please</h2>
+    <h2>Are you absurdly wealthy? Help me pay my tuition!</h2>
     <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
         <input type="hidden" name="cmd" value="_donations" />
         <input type="hidden" name="business" value="TASL57L8A2FMN" />
