--- a/templates/memes.html
+++ b/templates/memes.html
@@ -1,9 +1,9 @@
 {% extends "layout.html" %}
 {% block main %}
 <h3>Yalebot Meme Templates Index</h3>
-{% for meme in memes %}
+{% for meme, captions in memes %}
 <div class="meme">
-    <h4>{{ meme }}</h4>
+    <h4>{{ meme }}, {{ captions }} captions</h4>
     <img src="/static/images/memes/{{ meme }}.jpg" alt="{{ meme }} meme template image">
 </div>
 {% endfor %}
