--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,10 @@
 {% block main %}
 <h3>A GroupMe chatbot for Yale University.</h3>
 <p>Yalebot boasts a wide variety of capabilities, including meme generation, face-recognition photo filters, inspirational quote generation, fun facts, and verification that a user is Yale-affiliated. It is an ideal tool for Yale GroupMe chats (although it's also active in non-Yale chats, such as those of the University of Pennsylvania, Ivy League 2023, University of Michigan, etc.). The bot is maintained by <a href="https://erikboesen.com"</a>Erik Boesen</a> '23.</p>
-<a class="button prominent" href="https://oauth.groupme.com/oauth/authorize?client_id=46tkWF26m1juUxxvRGKUjVqVjbejYK4Njz3VA4ZZjWhr5dtH">Add Yalebot to your group!</a>
+<div class="button-row">
+    <a class="button" href="https://oauth.groupme.com/oauth/authorize?client_id=46tkWF26m1juUxxvRGKUjVqVjbejYK4Njz3VA4ZZjWhr5dtH">Add on GroupMe</a>
+    <a class="button" href="https://discordapp.com/oauth2/authorize?client_id=576194237175955456&permissions=0&scope=bot">Add on Discord (Beta)</a>
+</div>
 <h3>Bot capabilities</h3>
 <p>Static commands: {% for static_command in static_commands %}<strong>!{{ static_command }}</strong>{{ ", " if not loop.last }}{% endfor %}</p>
 <ul>
