Fix type of group_id in testing

--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -9,7 +9,7 @@
     <tbody>
         {% for user in users %}
         <tr>
-            {% for key, value in users.items() %}
+            {% for key, value in user.items() %}
             <td>{{ value }}</td>
             {% endfor %}
         </tr>
