Restyle analytics table

--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -3,7 +3,7 @@
 {% if users is None %}
 <p>No data for this group! Run <em>!analytics generate</em>.</p>
 {% else %}
-<table>
+<table id="analytics">
     <thead>
         {% for key, value in users[0].items() %}
         <th>{{ key }}</th>
