--- a/static/style.css
+++ b/static/style.css
@@ -169,6 +169,13 @@ footer a {
     height: 300px;
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
 }
+table#analytics {
+    border-collapse: collapse;
+}
+table#analytics td {
+    border: solid 1px #333;
+    text-align: right;
+}
 
 @media (min-width: 800px) {
     header, main, footer {
