Use lowercased none for jinja

--- a/templates/analytics.html
+++ b/templates/analytics.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 {% block main %}
-{% if users is None %}
+{% if users is none %}
 <p>No data for this group! Run <em>!analytics generate</em>.</p>
 {% else %}
 <table id="analytics">
