--- a/templates/cah.html
+++ b/templates/cah.html
@@ -1,4 +1,8 @@
 {% extends "layout.html" %}
+{% block head %}
+<link rel="stylesheet" href="/static/stylesheets/cah.css">
+{% endblock %}
+
 {% block main %}
 {% if is_czar %}
 <p>You are Card Czar.</p>
