--- a/templates/layout.html
+++ b/templates/layout.html
@@ -7,6 +7,8 @@
         <meta name="theme-color" content="#00356b">
         <link rel="stylesheet" href="/static/style.css">
         <link rel="icon" type="image/png" href="https://www.yale.edu/sites/all/themes/yale_blue/images/favicons/favicon.ico">
+        {% block head %}
+        {% endblock %}
     </head>
     <body>
         <header>
