--- a/templates/cah.html
+++ b/templates/cah.html
@@ -4,21 +4,13 @@
 {% endblock %}
 
 {% block main %}
-{% if is_czar %}
-<p>You are Card Czar.</p>
-{% endif %}
-<div class="cards">
-    <div class="black card">
-        {{ black_card }}
-    </div>
+<p id="czar"></p>
+<div class="black card">
 </div>
 <div class="cards">
-    {% for card in cards %}
-    <div class="white card">
-        {{ card }}
-    </div>
-    {% endfor %}
 </div>
-<div class="score">Your score: {{ score }}</div>
+<div id="score"></div>
+
+<script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.6/socket.io.min.js"></script>
 <script src="/static/scripts/cah.js"></script>
 {% endblock %}
