--- a/templates/layout.html
+++ b/templates/layout.html
@@ -5,7 +5,7 @@
         <title>Yalebot</title>
         <meta name="viewport" content="width=device-width">
         <meta name="theme-color" content="#00356b">
-        <link rel="stylesheet" href="/static/style.css">
+        <link rel="stylesheet" href="/static/stylesheets/main.css">
         <link rel="icon" type="image/png" href="https://www.yale.edu/sites/all/themes/yale_blue/images/favicons/favicon.ico">
         {% block head %}
         {% endblock %}
