Enable czar to submit cards for now

--- a/templates/cah.html
+++ b/templates/cah.html
@@ -8,7 +8,9 @@
 <p id="czar"></p>
 <div class="black card">
 </div>
-<div class="cards">
+<div class="cards" id="selection">
+</div>
+<div class="cards" id="hand">
 </div>
 <div id="score"></div>
 
