--- a/templates/cah.html
+++ b/templates/cah.html
@@ -3,6 +3,10 @@
 <link rel="stylesheet" href="/static/stylesheets/cah.css">
 {% endblock %}
 
+{% block logo %}
+<img src="/static/images/cah_logo.png" alt="Yalebot Against Humanity logo">
+{% endblock %}
+
 {% block main %}
 <p id="warning"></p>
 <section id="game">
