--- a/templates/layout.html
+++ b/templates/layout.html
@@ -12,7 +12,9 @@
     </head>
     <body>
         <header>
+            {% block logo %}
             <img src="/static/images/logo.png" alt="Yalebot logo">
+            {% endblock %}
         </header>
         <main>
             {% block main %}
