Iterate through items when freeing CAH players

--- a/templates/cah.html
+++ b/templates/cah.html
@@ -13,8 +13,10 @@
     <p id="czar"></p>
     <div class="black card" id="black">
     </div>
+    <h2>Played cards</h2>
     <div class="cards" id="selection">
     </div>
+    <h2>Your hand</h2>
     <div class="cards" id="hand">
     </div>
     <div id="score"></div>
