Use more formalized disabled system for cards

--- a/static/stylesheets/cah.css
+++ b/static/stylesheets/cah.css
@@ -42,3 +42,9 @@ h1 {
     background-position: center center;
     background-size: 100%;
 }
+.card[disabled] {
+    opacity: 0.5;
+}
+.card[disabled] .card {
+    cursor: none;
+}
