--- a/templates/cah.html
+++ b/templates/cah.html
@@ -11,9 +11,7 @@
 <p id="warning"></p>
 <section id="game">
     <p id="czar"></p>
-    <div class="black card" id="black">
-    </div>
-    <h2>Played cards</h2>
+    <div class="black card" id="black"></div>
     <div class="cards" id="selection">
     </div>
     <h2>Your hand</h2>
