--- a/static/stylesheets/cah.css
+++ b/static/stylesheets/cah.css
@@ -1,6 +1,12 @@
 body {
     border-color: #111;
 }
+header, main, footer {
+    padding: 10px;
+}
+main {
+    max-width: none;
+}
 h1 {
     color: #111;
 }
@@ -52,5 +58,5 @@ h1 {
     opacity: 0.5;
 }
 .cards.disabled .card {
-    cursor: default;
+    cursor: not-allowed;
 }
